# rust-computational-physics-example

ch01/csv_test/: requirements.txt
ch02/double-double/: Cargo.toml
ch02/double_double/: Cargo.toml
ch02/floating-point/: Cargo.toml
ch02/floating_point/: Cargo.toml
ch02/ndarray_test/: Cargo.toml
ch03/: Cargo.toml  diff_error.avif  diff_error.csv
ch03/examples/: adaptive_integration.rs  diff.rs  diff_h.rs  diff_plotting.rs  gaussian.rs  integration.rs
ch04/: Cargo.toml
ch04/array_operation/: Cargo.toml
ch04/eigenvalue/: Cargo.toml
ch04/linear_systems/: Cargo.toml
ch04/sparse/: Cargo.toml
ch05/multivariable_newton/: Cargo.toml
ch05/optimization/: Cargo.toml
ch05/root_finding/: Cargo.toml
ch06/: Cargo.toml
ch06/examples/: dft.rs  fft.rs  hanning_window.rs
ch07/: Cargo.toml
ch07/examples/: adaptive_step.rs  boundary_value.rs  euler.rs  runge_kutta.rs
ch08/: Cargo.toml
ch08/examples/: diffusion.rs  elliptic.rs  finite-difference.rs  wave.rs
ch09/: Cargo.toml
ch09/examples/: importance_sampling.rs  integration.rs  integration_rayon.rs  mcmc.rs  random_numbers.rs
ch10/: Cargo.toml  kepler.csv  molecular_dynamics.csv  particle_motion.csv  symplectic.csv
ch10/examples/: kepler.rs  molecular_dynamics.rs  particle_motion.rs  plot_kepler.rs  plot_molecular_dynamics.rs  plot_symplectic.rs  plot_trajectory.rs  symplectic.rs
csv_test/: Cargo.toml  README.md  output.csv  three-d-video.webm
csv_test/examples/: kiss3d-test.rs  plotting-multi.rs  plotting.py  plotting.rs  three-d-test.rs  three-d-video.rs
physics_test/: Cargo.toml
(+36 files in other folders)
